Removed excerpt metadata; description now functions as both so no need

--- a/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
+++ b/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
@@ -1,8 +1,7 @@
 ---
 title: "2022 McCombs Marketing Challenge"
 publishDate: 2022-10-27
-description: My team “Water?” conducted research, formulated novel ideas and marketing campaigns, and presented our solutions at the 2022 McCombs Marketing Case Challenge, earning a spot in the top four as finalists.
-excerpt: My team “Water?” conducted research, formulated novel ideas and marketing campaigns, and presented our solutions at the 2022 McCombs Marketing Case Challenge, earning a spot in the top four as finalists.
+description: My team “Water?” conducted research, formulated novel ideas and marketing campaigns, and presented our solutions at the 2022 McCombs Marketing Challenge, earning a spot in the top four as finalists.
 image: ~/assets/images/posts/2022-mccombs-marketing-challenge/Slide1.png
 tags:
   - McCombs
@@ -29,7 +28,7 @@ import Slide20 from "../../../assets/images/posts/2022-mccombs-marketing-challen
 
 
 
-# What is the McCombs Marketing Conference and Challenge?
+# What is the McCombs Marketing Conference?
 
 Hosted nearly every year, the McCombs Marketing Conference is a look into the world of marketing, both right now and towards the future. The Marketing Challenge, as part of this conference, allows teams of first-year MBA and MS Marketing students—that's me—to put to use our burgeoning skills and learnings based on a provided business case. Our team had just **one week** from October, 19 to conduct research, hone strategies and tactics, and creative an impactful presentation.
 
