Added "postImages" as an alias, reducing needing to go back so much

--- a/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
+++ b/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
@@ -24,8 +24,17 @@ import Slide17 from "../../../assets/images/posts/2022-mccombs-marketing-challen
 import Slide19 from "../../../assets/images/posts/2022-mccombs-marketing-challenge/Slide19.png";
 import Slide20 from "../../../assets/images/posts/2022-mccombs-marketing-challenge/Slide20.png";
 
-
-
+import Slide4 from "postImages/2022-mccombs-marketing-challenge/Slide4.png";
+import Slide5 from "postImages/2022-mccombs-marketing-challenge/Slide5.png";
+import Slide6 from "postImages/2022-mccombs-marketing-challenge/Slide6.png";
+import Slide8 from "postImages/2022-mccombs-marketing-challenge/Slide8.png";
+import Slide12 from "postImages/2022-mccombs-marketing-challenge/Slide12.png";
+import Slide13 from "postImages/2022-mccombs-marketing-challenge/Slide13.png";
+import Slide15 from "postImages/2022-mccombs-marketing-challenge/Slide15.png";
+import Slide16 from "postImages/2022-mccombs-marketing-challenge/Slide16.png";
+import Slide17 from "postImages/2022-mccombs-marketing-challenge/Slide17.png";
+import Slide19 from "postImages/2022-mccombs-marketing-challenge/Slide19.png";
+import Slide20 from "postImages/2022-mccombs-marketing-challenge/Slide20.png";
 
 
 # What is the McCombs Marketing Conference?
