--- a/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
+++ b/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
@@ -26,7 +26,7 @@ import Slide20 from "postImages/2022-mccombs-marketing-challenge/Slide20.png";
 
 # What is the McCombs Marketing Conference?
 
-Hosted nearly every year, the McCombs Marketing Conference is a look into the world of marketing, both right now and towards the future. The Marketing Challenge, as part of this conference, allows teams of first-year MBA and MS Marketing students—that's me—to put to use our burgeoning skills and learnings based on a provided business case. Our team had just **one week** from October, 19 to conduct research, hone strategies and tactics, and creative an impactful presentation.
+Hosted nearly every year, the McCombs Marketing Conference is a look into the world of marketing, both right now and towards the future. The Marketing Challenge, as part of this conference, allows teams of first-year MBA and MS Marketing students—that's me—to put to use our burgeoning skills and learnings based on a provided business case. Our team had just **one week** from October, 19 to conduct research, hone strategies and tactics, and create an impactful presentation.
 
 # Background
 
