Updated work posts

--- a/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
+++ b/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
@@ -26,13 +26,13 @@ import Slide20 from "postImages/2022-mccombs-marketing-challenge/Slide20.png";
 
 # What is the McCombs Marketing Conference?
 
-Hosted nearly every year, the McCombs Marketing Conference is a look into the world of marketing, both right now and towards the future. The Marketing Challenge, as part of this conference, allows teams of first-year MBA and MS Marketing students—that's me—to put to use our burgeoning skills and learnings based on a provided business case. Our team had just **one week** from October, 19 to conduct research, hone strategies and tactics, and create an impactful presentation.
+Hosted nearly every year, the McCombs Marketing Conference is a look into the world of marketing, both right now and towards the future. The Marketing Challenge, as part of this conference, allows teams of first-year MBA and MS Marketing students—that's me—to put to use our burgeoning skills and learnings based on a provided business case. Our team had just *one week* from October, 19 to conduct research, hone strategies and tactics, and create an impactful presentation.
 
 # Background
 
 ## The Situation
 
-One of the world's leading tech companies, Samsung Electronics manufactures and markets a breadth of electronics. In particular, their mobile portfolio—which includes the Samsung Galaxy phones—sold over **272 million** units globally in 2021. Samsung also has an opportunity to gather a greater share of Gen-Z in the United States, however research indicated that Gen-Z women lag Gen-Z men in preference for Samsung Galaxy. To combat the discrepancy, Samsung introduced the *Foldables* portfolio. Desirable features and the portfolio's compactness aim to attract Gen-Z women.
+One of the world's leading tech companies, Samsung Electronics manufactures and markets a breadth of electronics. In particular, their mobile portfolio—which includes the Samsung Galaxy phones—sold over *272 million* units globally in 2021. Samsung also has an opportunity to gather a greater share of Gen-Z in the United States, however research indicated that Gen-Z women lag Gen-Z men in preference for Samsung Galaxy. To combat the discrepancy, Samsung introduced the *Foldables* portfolio. Desirable features and the portfolio's compactness aim to attract Gen-Z women.
 
 ## The Challenge
 
