--- a/src/content/post/markdown-elements.mdx
+++ b/src/content/post/markdown-elements.mdx
@@ -2,7 +2,7 @@
 publishDate: 2000-01-01
 title: Markdown elements demo post
 description: Lorem ipsum dolor sit amet
-excerpt: Sint sit cillum pariatur eiusmod nulla pariatur ipsum. Sit laborum anim qui mollit tempor pariatur nisi minim dolor.
+draft: true
 tags:
   - markdown
   - blog
