Updated 2022 McCombs Marketing Challenge post

--- a/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
+++ b/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
@@ -133,7 +133,7 @@ Following a rigorous week of occasionally twelve-hour days, we presented our fin
          alt="idk"
 />
 
-### TikTok Challenges
+### TikTok Challenges: Give to the Next & Finders Keepers
 <Picture src={Slide20}
          widths={[900, 1400, 2000]}
          aspectRatio="16:9"
@@ -142,10 +142,6 @@ Following a rigorous week of occasionally twelve-hour days, we presented our fin
 />
 
 
-#### Give to the Next
-
-
-#### Finders Keepers
 
 {/*
 
