Updated tags to maintain case

--- a/src/content/post/projects/cleaning-the-iowa-liquor-sales-dataset.mdx
+++ b/src/content/post/projects/cleaning-the-iowa-liquor-sales-dataset.mdx
@@ -5,7 +5,7 @@ description: This R coding project aimed to clean the Iowa Liquor Sales dataset.
 image: ~/assets/images/posts/cleaning-the-iowa-liquor-sales-dataset/iowa-liquor-sales.jpg
 tags:
   - McCombs
-  - marketing
+  - Coding
   - R
 ---
 
