Created PostImage component to streamline adding images to posts

--- a/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
+++ b/src/content/post/projects/2022-mccombs-marketing-challenge.mdx
@@ -8,8 +8,7 @@ tags:
   - Marketing
 ---
 
-import { Picture } from "@astrojs/image/components";
-import { Icon } from 'astro-icon';
+import PostImage from '~/components/blog/PostImage.astro'
 
 import Slide4 from "postImages/2022-mccombs-marketing-challenge/Slide4.png";
 import Slide5 from "postImages/2022-mccombs-marketing-challenge/Slide5.png";
@@ -54,91 +53,69 @@ Following a rigorous week of occasionally twelve-hour days, we presented our fin
 
 ### Company Overview
 
-<Picture src={Slide4}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide4} 
+  alt="idk"
 />
 
-<Picture src={Slide5}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide5}
+  alt="idk"
 />
 
-<Picture src={Slide6}
-           widths={[900, 1400, 2000]}
-           aspectRatio="16:9"
-           format="webp"
-           alt="idk"
+<PostImage
+  src={Slide6}
+  alt="idk"
 />
 
 ## Research and Target
-<Picture src={Slide8}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide8}
+  alt="idk"
 />
 
-<Picture src={Slide12}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide12}
+  alt="idk"
 />
 
-<Picture src={Slide13}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide13}
+  alt="idk"
 />
 
 ## Our Campaign
-<Picture src={Slide15}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide15}
+  alt="idk"
 />
 
 ## Our Strategies
 
 ### Best Buds Bundling
-<Picture src={Slide16}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide16}
+  alt="idk"
 />
 
 
 ### Updated Landing Pages
-<Picture src={Slide17}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide17}
+  alt="idk"
 />
 
 
 ### Building Influencers
-<Picture src={Slide19}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide19}
+  alt="idk"
 />
 
 ### TikTok Challenges: Give to the Next & Finders Keepers
-<Picture src={Slide20}
-         widths={[900, 1400, 2000]}
-         aspectRatio="16:9"
-         format="webp"
-         alt="idk"
+<PostImage
+  src={Slide20}
+  alt="idk"
 />
 
 
